--- a/react/app/index.html
+++ b/react/app/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%; widht: 100%; margin: 0;">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval'">
   </head>
-  <body>
-    <div id="app"></div>
+  <body style="height: 100%; widht: 100%; margin: 0;">
+    <div id="app" style="height: 100%; widht: 100%;"></div>
   </body>
 </html>
