Topにフォームを配置

--- a/react/app/index.html
+++ b/react/app/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval'">
   </head>
   <body style="height: 100%; widht: 100%; margin: 0;">
-    <div id="app" style="height: 100%; widht: 100%;"></div>
+    <div id="app" style="height: 100%; width: 100%; background-image: url(../src/assets/image/top_background.jpg);
+    background-size: cover;">
+    </div>
   </body>
 </html>
