ボタンでのページ遷移を実装

--- a/react/app/index.html
+++ b/react/app/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval'">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   </head>
-  <body style="height: 100%; widht: 100%; margin: 0;">
+  <body style="height: 100%; widht: 100%; margin: 0; font-family: 'Roboto';">
     <div id="app" style="height: 100%; width: 100%; background-image: url(../src/assets/image/top_background.jpg);
     background-size: cover;">
     </div>
