--- a/react/app/index.html
+++ b/react/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   </head>
-  <body style="height: 100%; widht: 100%; margin: 0; font-family: 'Roboto';">
+  <body style="height: 100%; width: 100%; margin: 0; font-family: 'Roboto';">
     <div id="app" style="height: 100%; width: 100%; background-image: url(../src/assets/image/top_background.jpg);
     background-size: cover;">
     </div>
