--- a/react/app/index.html
+++ b/react/app/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html style="height: 100%; widht: 100%; margin: 0;">
+<html style="height: 100%; width: 100%; margin: 0;">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval'">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval'"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   </head>
   <body style="height: 100%; width: 100%; margin: 0; font-family: 'Roboto';">
     <div id="app" style="height: 100%; width: 100%; background-image: url(../src/assets/image/top_background.jpg);
     background-size: cover;">
     </div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhmcICTsDobTNxKLWtySudZPGJbP4mpkU"></script>
   </body>
 </html>
