--- a/react/app/index.html
+++ b/react/app/index.html
@@ -5,10 +5,10 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval'"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   </head>
-  <body style="height: 100%; width: 100%; margin: 0; font-family: 'Roboto';">
+  <body style="height: 100%; width: 100%; margin: 0; font-family: 'Roboto'; overflow: hidden;">
     <div style="height: 100%; width: 100%; background-image: url(../src/assets/image/top_background.jpg);
     background-size: cover;">
-      <div id="app" style="height: 100%; width: 100%; background-color: rgba(0,0,0,0.5);">  
+      <div id="app" style="height: 100%; width: 100%; background-color: rgba(0,0,0,0.5);">
       </div>
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhmcICTsDobTNxKLWtySudZPGJbP4mpkU"></script>
